--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@
     border: 2px solid #000;
     border-radius: 6px;
 }
+.containerWrapper .loginContainer .loginInnerContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 380px;
+    width: 500px;
+}
 
 input {
     outline: none;
@@ -92,4 +100,25 @@ button {
     flex-direction: column;
     width: 100%;
     align-items: center;
+}
+
+.AnimationContainer{
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    animation:slideup;
+    animation-duration: .22s;
+    animation-fill-mode: both;
+}
+
+@keyframes  slideup{
+    0%{
+        opacity:0;
+        transform:translateY(-300px);
+    }
+    100%{
+        opacity:1;
+        transform:translateY(0px)
+    }
 }
